worked on body home page

--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,9 @@
     color: white;
   }
   
-  /* Hide the link that should open and close the topnav on small screens */
+  /* Responsiveness*/
   .topnav .icon {
     display: none;
   } 
+
+  
